[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Multi-agent task management system. Create agents with roles and capabilities,"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "agent-orchestration", "multi-agent", "workflow-automation", "task-delegation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/agent-orchestrator-mcp"
Documentation = "https://meok.ai/docs/agent-orchestrator-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/agent-orchestrator-mcp/issues"
